--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,21 @@
 /* TODO: Make it awesome */
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: bisque;
+    color: palevioletred;
+}
+
+main {
+    width: 1024px;
+    margin: 3rem auto;
+    /*dispaly: grid*/
+}
+
+header {
+    text-align: center;
+    font-size: 5rem;
+}
